--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --background-color: #eeeff1;
 
 }
- 
+
 * {
     margin: 0;
     padding: 0;
@@ -40,30 +40,30 @@ nav {
     background-color: white;
 }
 
-nav .left a{
+nav .left a {
     color: var(--text-color);
     font-size: 22px;
     font-weight: 600;
 }
 
-nav .right a{
+nav .right a {
     color: var(--text-color);
     margin: 0 10px;
 }
 
-nav .right a:last-child{
+nav .right a:last-child {
     color: white;
     background-color: var(--text-color);
     padding: 5px 15px;
     border-radius: 5px;
 }
 
-nav .right a span{
+nav .right a span {
     margin: 5px;
 }
 
 /* SECTION1 Hero section */
-.hero_section{
+.hero_section {
     display: flex;
     min-height: 80vh;
     justify-content: space-between;
@@ -82,10 +82,12 @@ nav .right a span{
     /* flex-direction: column;newly added */
     /* border: 1px solid #1a1c20; */
 }
-.hero_section .text .links{
+
+.hero_section .text .links {
     margin-top: 25px;
 }
-.hero_section .text .links a{
+
+.hero_section .text .links a {
     flex: 5;
     display: inline-block;
     padding: 5px 10px;
@@ -95,478 +97,565 @@ nav .right a span{
     margin-top: 10px;
     transition: .1s;
 }
-.hero_section .text .links a:hover{
+
+.hero_section .text .links a:hover {
     color: var(--text-color);
     border: 2px solid var(--text-color);
 }
-.hero_section .text h2{
+
+.hero_section .text h2 {
     font-size: 45;
 }
-.hero_section .photo{
+
+.hero_section .photo {
     flex: 2%;
     display: flex;
     justify-content: right;
     /* border: 1px solid #1a1c20; */
 }
-.hero_section .photo img{
-    width: 350px;
-    height: 380px;
+
+.hero_section .photo img {
+    width: 100%;
+    height: auto;
+    max-width: 300px;
     border-radius: 50%;
 }
 
 /* SECTION2: Skills */
-.skills_section{
+.skills_section {
     padding: 0 100px;
     padding-top: 100px;
     margin-bottom: 130px;
     min-height: 80vh;
 }
 
-.skills_section h2{
+.skills_section h2 {
     text-align: center;
     font-size: 35px;
     margin-bottom: 30px;
 }
-.skills_section .table_skills{
-    column-count: 4;
 
+.skills_section .table_skills {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    place-items: center;
 }
-.skills_section .table_skills h2{
+
+.skills_section .table_skills h2 {
     display: flex;
     font-size: 22px;
     justify-content: flex-start;
 }
-.skills_section .table_skills ul{
+
+.skills_section .table_skills ul {
     list-style-position: inside;
-    display: flex;
-    width: 200px;
-    min-height: 300px;
-    margin-left: 50px;
     font-weight: 400;
     font-size: 17px;
-    flex-direction: column;
+    gap: 5px;
+    padding: 0;
+    margin: 0;
 }
 
 /* SECTION3: About Me */
-.about_me_section{
+.about_me_section {
     padding: 0 50px;
     margin-bottom: 100px;
     min-height: 85vh;
     padding-top: 100px;
+    /* border: 2px solid red; */
 }
 
-.about_me_section h2{
+.about_me_section h2 {
     font-size: 35px;
     text-align: center;
     margin-bottom: 30px;
 }
 
-.about_me_section .text{
-    text-align: justify;
+.about_me_section .text {
     margin-bottom: 30px;
 }
 
-.about_me_section .text h3{
+.about_me_section .text h3 {
     text-align: center;
     font-size: 20px;
     margin-bottom: 30px;
 }
-.about_me_section .text p{
+
+.about_me_section .text p {
     margin-bottom: 10px;
     margin-top: 10px;
-}
-.about_me_section .text h4{
     text-align: justify;
-    font-size: 20px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+    text-indent: 40px;
+    /* border: 2px solid blue; */
 }
 
 /* SECTION4: CONTACT */
-.contact_section{
+.contact_section {
     padding: 0 50px;
     margin-bottom: 100px;
     min-height: 85vh;
     padding-top: 100px;
+    border: 2px solid black;
 }
-.contact_section h2{
+
+.contact_section h2 {
     font-size: 35px;
     text-align: center;
     margin-bottom: 30px;
 }
-.contact_section p{
+
+.contact_section p {
     margin-bottom: 30px;
     text-align: center;
     /* padding: 0 305px; */
 }
-.contact_section .google-form{
+
+.contact_section .google-form {
     display: flex;
     justify-content: center;
-    
+
 }
 
-@media  (min-device-width: 1500px){
-nav {
-
-    padding: 0 100px;
-}
-
-nav .left a{
-    color: var(--text-color);
-    font-size: 30px;
-    font-weight: 600;
-}
-
-nav .right a{
-    color: var(--text-color);
-    margin: 0 10px;
-    font-size: 20px;
-}
-.hero_section{
-    padding: 0 500px;
-    /* margin-bottom: 200px; */
-}
-.hero_section .text{
-    font-size: 20px;
-}
-.hero_section .text h2{
-    font-size: 45px;
-}
-.hero_section .text .links a{
-    font-size: 20px;
-}
-.skills_section{
-    padding: 0 500px;
-    padding-top: 100px;
-}
-.skills_section h2{
-    font-size: 45px;
-    padding-bottom: 20px;
-}
-.skills_section .table_skills h2{
-    display: flex;
-    font-size: 30px;
-    justify-content: left;
-}
-.skills_section .table_skills ul{
-    list-style-position: right;
-    display: flex;
-    width: auto;
-    min-height: 400px;
-    font-weight: 400;
-    font-size: 25px;
-    flex-direction: column;
-    column-gap: 30px;
-}
-.about_me_section h2{
-    font-size: 45px;
-}
-
-.about_me_section .text h3{
-    font-size: 30px;
-    padding-bottom: 20px;
-}
-.about_me_section .text{
-    font-size: 25px;
-    padding: 0 500px;
-}
-
-.contact_section{
-    padding: 0 500px;
-    padding-top: 100px;
-}
-
-.contact_section h2{
-    font-size: 45px;
-}
-.contact_section p{
-    font-size: 25px;
-}
-}
-@media  (max-device-width: 1499px){
+@media (min-width: 1500px) {
     nav {
-    
-        padding: 0 50px;
+
+        padding: 0 100px;
     }
-    
-    nav .left a{
+
+    nav .left a {
+        color: var(--text-color);
+        font-size: 30px;
+        font-weight: 600;
+    }
+
+    nav .right a {
+        color: var(--text-color);
+        margin: 0 10px;
+        font-size: 20px;
+    }
+
+    .hero_section {
+        padding: 0 500px;
+        /* margin-bottom: 200px; */
+    }
+
+    .hero_section .text {
+        font-size: 20px;
+    }
+
+    .hero_section .text h2 {
+        font-size: 45px;
+    }
+
+    .hero_section .text .links a {
+        font-size: 20px;
+    }
+
+    .skills_section {
+        padding: 0 500px;
+        padding-top: 100px;
+    }
+
+    .skills_section .table_skills {
+        grid-template-columns: repeat(4, 1fr);
+        align-items: stretch;
+    }
+
+    .skills_section h2 {
+        font-size: 45px;
+        padding-bottom: 20px;
+    }
+
+    .skills_section .table_skills h2 {
+        display: flex;
+        font-size: 30px;
+        justify-content: left;
+    }
+
+    .skills_section .table_skills ul {
+        font-weight: 400;
+        font-size: 25px;
+        gap: 30px
+    }
+
+    .about_me_section h2 {
+        font-size: 45px;
+    }
+
+    .about_me_section .text h3 {
+        font-size: 30px;
+        padding-bottom: 20px;
+    }
+
+    .about_me_section .text {
+        font-size: 25px;
+        padding: 0 500px;
+    }
+
+    .contact_section {
+        padding: 0 500px;
+        padding-top: 100px;
+    }
+
+    .contact_section h2 {
+        font-size: 45px;
+    }
+
+    .contact_section p {
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 1499px) {
+
+    nav .left a {
         color: var(--text-color);
         font-size: 25px;
         font-weight: 600;
     }
-    
-    nav .right a{
+
+    nav .right a {
         color: var(--text-color);
         margin: 0 10px;
         font-size: 16px;
     }
-    .hero_section{
+
+    .hero_section {
         padding: 0 50px;
     }
-    .hero_section .text{
+
+    .hero_section .text {
         font-size: 16px;
     }
-    .hero_section .text h2{
+
+    .hero_section .text h2 {
         font-size: 25px;
     }
-    .hero_section .text .links a{
+
+    .hero_section .text .links a {
         font-size: 16px;
     }
-    .skills_section{
-        padding: 0 50px;
+
+    .skills_section {
         padding-top: 100px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
-    .skills_section h2{
+
+    .skills_section .table_skills {
+        grid-template-columns: repeat(4, 1fr);
+        align-items: stretch;
+        width: 100%;
+    }
+
+    .skills_section h2 {
         font-size: 30px;
         padding-bottom: 20px;
     }
-    .skills_section .table_skills h2{
+
+    .skills_section .table_skills h2 {
         display: flex;
         font-size: 24px;
         justify-content: left;
     }
-    .skills_section .table_skills ul{
-        list-style-position: right;
-        display: flex;
-        width: auto;
-        min-height: 400px;
+
+    .skills_section .table_skills ul {
         font-weight: 400;
         font-size: 20px;
-        flex-direction: column;
-        column-gap: 30px;
+        gap: 10px;
+        /* border: 2px solid black; */
     }
-    .about_me_section h2{
+
+    .about_me_section h2 {
         font-size: 30px;
     }
-    
-    .about_me_section .text h3{
+
+    .about_me_section .text h3 {
         font-size: 22px;
         padding-bottom: 5px;
     }
-    .about_me_section .text{
+
+    .about_me_section .text {
         font-size: 18px;
-        padding: 0 50px;
-    }
-    
-    .contact_section{
-        padding: 0 50px;
-        padding-top: 100px;
-    }
-    
-    .contact_section h2{
-        font-size: 30px;
-    }
-    .contact_section p{
-        font-size: 18px;
-        padding: 0 300px;
-    }
-    } 
-@media  (max-width: 800px){
-    /* SECTION1: HERO */
-    .hero_section .text h2{
-        font-size: 25px;
-    }
-    .hero_section .photo img{
-        width: 250px;
-        height: 290px;
-        border-radius: 50%;
-    }
-    
-    .skills_section .table_skills{
-        column-count: 4;
-        column-width: 200px;
     }
 
-    .skills_section h2{
+    .contact_section {
+        padding-top: 100px;
+    }
+
+    .contact_section h2 {
         font-size: 30px;
     }
-    .skills_section .table_skills h2{
+
+    .contact_section p {
+        font-size: 18px;
+        text-align: center;
+    }
+}
+
+@media (max-device-width: 991px) {
+    .hero_section .text h2 {
+        font-size: 25px;
+    }
+
+    .hero_section .photo {
+        /* border: 2px solid black; */
+        align-items: center;
+    }
+
+    .skills_section {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    .skills_section .table_skills {
+        align-items: stretch;
+    }
+
+    .skills_section h2 {
+        font-size: 30px;
+        margin-bottom: 0;
+    }
+
+    .skills_section .table_skills h2 {
         display: flex;
         font-size: 21px;
         justify-content: left;
     }
-    .skills_section .table_skills ul{
-        list-style-position: right;
+
+    .skills_section .table_skills ul {
+        font-weight: 400;
+        font-size: 18px;
+        gap: 10px
+    }
+
+    .about_me_section h2 {
+        font-size: 30px;
+    }
+
+    .contact_section .form h2 {
+        font-size: 30px;
+    }
+
+    .contact_section .form p {
+        text-align: justify;
+        padding: 0;
+    }
+}
+
+@media (max-width: 800px) {
+    .hero_section .text h2 {
+        font-size: 25px;
+    }
+
+    .hero_section .photo {
+        /* border: 2px solid black; */
+        align-items: center;
+    }
+
+    /* .hero_section .photo img{
+        width: 250px;
+        height: 290px;
+        border-radius: 50%;
+    } */
+    .skills_section {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    .skills_section .table_skills {
+        grid-template-columns: repeat(4, 1fr);
+        align-items: stretch;
+    }
+
+    .skills_section h2 {
+        font-size: 30px;
+        margin-bottom: 0px;
+    }
+
+    .skills_section .table_skills h2 {
         display: flex;
-        /* width: 180px; */
-        min-height: 320px;
+        font-size: 21px;
+        justify-content: left;
+    }
+
+    .skills_section .table_skills ul {
         font-weight: 400;
         font-size: 16px;
-        flex-direction: column;
-        column-gap: 30px;
+        gap: 10px;
     }
-    .about_me_section h2{
+
+    .about_me_section h2 {
         font-size: 30px;
     }
-    .contact_section .form h2{
+
+    .about_me_section .text {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+    .contact_section .form h2 {
         font-size: 30px;
     }
-    .contact_section{
+
+    .contact_section {
         margin: 0;
         padding: 0 20px;
     }
-    .contact_section .form h2{
+
+    .contact_section .form h2 {
         padding-top: 100px;
     }
-    .contact_section .form p{
+
+    .contact_section .form p {
         /* align-items: center; */
         text-align: justify;
-        padding: 0 80px;
         margin-bottom: 30px;
     }
 }
-@media  (max-device-width: 991px){
-    .hero_section .text h2{
-        font-size: 25px;
-    }
-    .hero_section .photo img{
-        width: 250px;
-        height: 290px;
-        border-radius: 50%;
-    }
-    
-    .skills_section .table_skills{
-        column-count: 2;
-        column-width: 200px;
-    }
 
-    .skills_section h2{
-        font-size: 30px;
-    }
-    .skills_section .table_skills h2{
-        display: flex;
-        font-size: 21px;
-        justify-content: left;
-    }
-    .skills_section .table_skills ul{
-        list-style-position: right;
-        display: flex;
-        min-height: 350px;
-        font-weight: 400;
-        font-size: 18px;
-        flex-direction: column;
-        column-gap: 30px;
-    }
-    .about_me_section h2{
-        font-size: 30px;
-    }
-    .contact_section .form h2{
-        font-size: 30px;
-    }
-    .contact_section .form p{
-        text-align: justify;
-        padding: 0 150px;
-    }
-} 
-@media  (max-width: 740px){
-    /* SECTION1: HERO */
-    nav{
+@media (max-width: 740px) {
+    nav {
         padding: 0 15px;
     }
-    nav .right a{
+
+    nav .right a {
         color: var(--text-color);
         margin: 0 2px;
     }
-    .hero_section{
+
+    .hero_section {
         padding-top: 60px;
         flex-direction: column-reverse;
         gap: 20px;
     }
 
-    .hero_section .photo img{
-        width: 260px;
-        height: 290px;
-    }
-    .hero_section text{
+    .hero_section .photo {
+        /* border: 2px solid black; */
         align-items: center;
     }
-    .skills_section .table_skills{
-        column-count: 2;
-    
+
+    .hero_section text {
+        align-items: center;
     }
-    .skills_section .table_skills h2{
+
+    .skills_section .table_skills {
+        grid-template-columns: repeat(2, 1fr);
+        align-items: stretch;
+    }
+
+    .skills_section .table_skills h2 {
         display: flex;
         font-size: 22px;
         justify-content: center;
+        margin-bottom: 0px;
     }
-    .skills_section .table_skills ul{
+
+    .skills_section .table_skills ul {
         list-style-position: inside;
-        display: flex;
-        width: auto;
         padding: 0 20px;
         margin: 0px;
-        min-height: auto;
-        padding: 0 20px;
-        min-height: 350px;
         font-weight: 400;
         font-size: 17px;
-        flex-direction: column;
+        gap: 10px
+    }
+
+    .about_me_section .text {
+        padding-left: 50px;
+        padding-right: 50px;
     }
 }
-@media (max-width: 600px){
+
+@media (max-width: 600px) {
+
     /* NAVBAR */
-    nav{
+    nav {
         padding: 0 20px;
     }
-    nav .right a{
+
+    nav .right a {
         font-size: 22px;
         margin: 0 5px;
     }
-    nav .right a:last-child{
+
+    nav .right a:last-child {
         color: var(--text-color);
         background-color: transparent;
         padding: 5px 5px;
     }
-    nav .right a span{
+
+    nav .right a span {
         display: none;
     }
 
-    /* SECTION1: Hero */
-    .hero_section{
-        padding: 0 20px;
-        padding-top: 40px;
-    }
-    .hero_section .text{
-        padding: 0 20px;
-    }
-    .hero_section .text h2{
+    nav .left a {
         font-size: 25px;
     }
 
-    /* SECTION2: Skills */
-    .skills_section{
+    /* SECTION1: Hero */
+    .hero_section {
         padding: 0 20px;
+        padding-top: 40px;
+    }
+
+    .hero_section .text {
+        padding: 0 20px;
+        /* border: 2px solid black; */
+    }
+
+    .hero_section .text h2 {
+        font-size: 25px;
+    }
+
+    .hero_section .photo {
+        /* border: 2px solid black; */
+        align-items: center;
+    }
+
+    .hero_section .photo img {
+        max-width: 245px;
+    }
+
+    /* SECTION2: Skills */
+    .skills_section {
+        padding: 0;
         padding-top: 100px;
     }
 
-    .skills_section .table_skills{
-        column-count: 2;
-    
+    .skills_section .table_skills {
+        grid-template-columns: 1fr;
+        align-items: stretch;
     }
-    .skills_section .table_skills h2{
+
+    .skills_section .table_skills h2 {
         display: flex;
         font-size: 22px;
         justify-content: center;
+        margin-bottom: 0px;
     }
-    .skills_section .table_skills ul{
-        list-style-position: inside;
-        display: flex;
-        width: auto;
-        padding: 0 20px;
-        min-height: auto;
-        margin-bottom: 20px;
+
+    .skills_section .table_skills ul {
         font-weight: 400;
-        font-size: 17px;
-        flex-direction: column;
-        justify-items: left;
+        font-size: 20px;
+        margin-bottom: 20px;
     }
-    .contact_section{
+
+    .contact_section {
         padding: 0;
         min-height: 30vh;
     }
-    .contact_section .form p{
+
+    .contact_section .form p {
         margin: 0;
         padding: 0 20px;
         margin-bottom: 20px;
+    }
+
+    .about_me_section {
+        padding: 0 20px;
+    }
+
+    .about_me_section .text {
+        padding: 0 6px;
     }
 }
