--- a/styles.css
+++ b/styles.css
@@ -637,7 +637,8 @@ nav .right a span {
     }
 
     .about_me_section {
-        padding: 0 20px;
+        padding-left:  20px;
+        padding-right: 20px;
     }
 
     .about_me_section .text {
